--- a/support/Rango.tmbundle/info.plist
+++ b/support/Rango.tmbundle/info.plist
@@ -17,6 +17,7 @@
 		<string>417492C4-53BA-44CF-84DE-9C2EEAA97E06</string>
 		<string>ED6249C5-EEBD-4ACB-B6E3-93A399BB05A5</string>
 		<string>3A4EC7EA-FD5B-4611-BE8F-95D52E22981E</string>
+		<string>0D072F06-953B-48A8-B9A0-D7DA1E8EE9F5</string>
 	</array>
 	<key>uuid</key>
 	<string>77CFA541-7A79-4D0F-BD05-84F9D38379D7</string>
