Support for multiple template engines

--- a/stubs/project/content/Gemfile
+++ b/stubs/project/content/Gemfile
@@ -11,6 +11,7 @@
 # Specify a dependency on rango. When the bundler downloads gems,
 # it will download rango as well as all of rango' dependencies
 gem "rango"#, git: "git://github.com/botanicus/rango.git"
+gem "rack"#, git: "git://github.com/rack/rack.git"
 
 <% case @router %>
 <% when "usher" %>
@@ -22,8 +23,14 @@ gem "rack-router"#, git: "git://github.com/carllerche/rack-router.git"
 # TODO: routes
 <% when "urlmap" %>
 <% end %>
-gem "rack"#, git: "git://github.com/rack/rack.git"
+
+<% case @template_engine %>
+<% when "haml" %>
 gem "haml"#, git: "git://github.com/nex3/haml.git"
+<% when "erb" %>
+<% when "erubis" %>
+gem "erubis"#, git: "git://github.com/genki/erubis.git"
+<% end %>
 
 gem "dm_sqlite3"#, git: "git://github.com/datamapper/do.git"
 gem "dm-core"#, git: "git://github.com/datamapper/dm-core.git"
