Fixed few bugs in generators

--- a/stubs/stack/content/.gitignore
+++ b/stubs/stack/content/.gitignore
@@ -1,12 +1,18 @@
 .DS_Store
+
 *~
 .*.swp
 .*.swo
-settings_local.rb
-*.cache
+
 :memory
+
 *.db
 tmp/*
 log/*
+
+*.gem
+pkg/*
+
+bin
 gems/*
 !gems/cache
