Fixed stupid bug in gitignore, so cached gems aren't ignored anymore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-.DS_Store
-*.gem
+# we can't use just *.gem because
+/*.gem
 
+.DS_Store
 .cache
 .yardoc
 
+script/*
 gems/*
 !gems/cache
-
-script/*
-!script/spec
-!script/normalize.rb
